@@ -1,3 +1,6 @@
+2011-08-058 Kirit Saelensminde  <kirit@felspar.com>
+ Added a server side implementation for updating instances.
+
 2011-08-05  Kirit Saelensminde  <kirit@felspar.com>
  The server operations can now implement either `operation` or the HTTP method that they need to execute with. Unsupported methods will return a 403.
  Refactored the layout of the operations.
